# simple_message_queue

./: .gitignore  CMakeLists.txt  README.md
src/: msg_queue.h  msg_quque.cpp  tqueue.h
test/: mq_test.cpp
